# asdf2json

./: .editorconfig  .gitignore  README.md  asdf2json.cabal  default.nix  dprint.json  flake.nix  renovate.json
.github/workflows/: ci.yml  dependency-review.yml  dprint.yml  merge-bot-pr.yml  release.yml
app/: Main.hs
examples/: .tool-versions
scripts/: Main.hs
src/Asdf/: Parser.hs
test/Asdf/: ParserSpec.hs
